Refactoring notifications sound
